<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Truck Tracker</string>

    <string name="item_darktheme">Theme sombre activé</string>
    <string name="parametre">Paramètres</string>

    <string name="hint_name">Nom</string>
    <string name="hint_tyre_type">Type de roue</string>
    <string name="hint_trailer_axles">Essieu de remorque</string>
    <string name="hint_tractor_axles">Essieu de tracteur</string>

    <string name="act_menu_btn">Valider</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="journey_time">Temps du trajet : </string>
    <string name="gps_unable">Le GPS est activé : </string>
    <string name="location_number">Nombre de localisations reçu : </string>
    <string name="send_file">Envoi d\'un fichier en cours… </string>
    <string name="unknow">Inconnu</string>
    <string name="error_gps_disabled">Veuillez activer votre localisation</string>
    <string name="start_journey">Trajet débuté le : </string>

    <string name="location_updated">Location Updated: %1$s</string>

    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>

    <string name="notification">Prototype de localisation est exécuté en arrière-plan</string>
    <string name="notification_file">Envoi du fichier MAPM</string>

    <string name="message_fin">Fin du trajet</string>

    <string name="dialog_type_roue">Choissisez le type de roue</string>
    <string name="dialog_essieu_tracteur">Choissisez le nombre d\'essieu du tracteur</string>
    <string name="dialog_essieu_remorque">Choissisez le nombre d\'essieu de la remorque</string>

</resources>
