<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:alpha="0.45"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:contextClickable="false"
        android:cropToPadding="false"
        android:defaultFocusHighlightEnabled="false"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:srcCompat="@drawable/bckg_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="81dp"
            android:layout_marginBottom="256dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/act_menu_txt_nom"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/act_menu_txt_roue"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/hint_tyre_type"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/act_menu_txt_ess_tracteur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/hint_tractor_axles"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/act_menu_txt_ess_remorque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/hint_trailer_axles"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/act_menu_btn_valider"
            android:layout_width="170dp"
            android:layout_height="64dp"
            android:layout_marginStart="120dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="121dp"
            android:text="@string/act_menu_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>